Final commit prior to submission, updates and changes to the python notebook for hw 2

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -18,7 +18,7 @@
     "* $a = 1, b = 2$ and because $f(n)= \\theta(n^{0}) = 2, d = 0$\n",
     "* Because $a = 1$ the recurrence bound is $\\theta(n^{d + 1})$\n",
     "* $\\theta(n^{d + 1}) = \\theta(n^{0 + 1})$\n",
-    "* Therefore $T(n)$ is $\\theta(n)$\n",
+    "* Therefore $T(n) = \\theta(n)$\n",
     "\n",
     "b) $T(n) = 3T(n - 1) + 1$\n",
     "\n",
@@ -73,13 +73,15 @@
     "\n",
     "a) Explain why the STOOGESORT algorithm sorts its input. (This is not a formal proof)\n",
     "\n",
+    "The method will do nothing if the passed in array is empty or only contains one element. (Trivial case).\n",
+    "\n",
     "For when $n = 2$ (base case) <code>STOOGESORT(A[0, 1])</code> will properly sort the array by swapping the two elements if the first element is greater than the second, otherwise the array will be unchanged because it is already sorted.\n",
     "\n",
     "However when the length of the array is greater than 2 e.g. ($n \\geq 3$) an integer k is calculated which is the ceiling of the $\\frac{2}{3}$ of length $n$. Then there are the three recursive calls to STOOGESORT where the passed in arrays for each call are as follows:\n",
     "\n",
-    "* First subarray is the first $\\frac{2}{3}$ of the total array which is then sorted in the first call\n",
-    "* Second subarray is the last $\\frac{2}{3}$ of the total array which is then sorted in the second call\n",
-    "* The third recursive call sorts the first $\\frac{2}{3}$ of the total array again like the first call before it.\n",
+    "* First subarray is the first $\\frac{2}{3}$ of the total array which is then sorted in the first call (and subsequent recursive calls if necessary)\n",
+    "* Second subarray is the last $\\frac{2}{3}$ of the total array which is then sorted in the second call (and subsequent recursive calls if necessary)\n",
+    "* The third recursive call sorts the first $\\frac{2}{3}$ of the total array again like the first call before it. (and subsequent recursive calls if necessary)\n",
     "\n",
     "This algorithm sorts the total array because it passes sub-arrays that fully encompass the array that was originally passed in. The method is inefficient however because it overlaps in the sub-arrays that it sorts in the sense that there will be overlap between the first $\\frac{2}{3}$ and the second $\\frac{2}{3}$ of the array when sorting.\n",
     "\n",
@@ -94,12 +96,12 @@
     "* First we check if the length of the passed in array is of length $2$ ($n = 2$) which it is not so we go to the else if block and see that that is in fact true because $n = 4 \\gt 2$\n",
     "* We now calculate the variable $m$ to be equal to $m = floor(\\frac{2 * 4}{3}) = 2$\n",
     "* The first recursive call of STOOGESORT will be passed in the sub-array of $[23, 12]$ which will satisfy the $n = 2$ condition which will swap the two elements so the total array is now: $[12, 23, 5, 67]$.\n",
-    "* The second recursive call of STOOGESORT will be passed in the sub-array of $[5, 67]$ which will satisfy the $n = 2$ condition which will not do anything to the sub-array because $A[0] \\lt A[1]$ already.\n",
+    "* The second recursive call of STOOGESORT will be passed in the sub-array of $[5, 67]$ which will satisfy the $n = 2$ condition which will not do anything to the sub-array because $A[0] \\lt A[1]$ already, leaving the total array unchanged also.\n",
     "* The third and final recursive call of STOOGESORT will be passed in the sub-array of $[12, 23]$ which will satisfy the $n = 2$ condition again but nothing will be done because they were sorted in the first recursive call.\n",
     "* Therefore the resulting array at the end of all of the calls to STOOGESORT will be:\n",
     "* $[12, 23, 5, 67]$ which is not a complete sort therefore showing if the algorithm changes to use $m = floor(\\frac{2n}{3})$ it will not correctly sort at least in the case shown above which is my counter-example.\n",
     "\n",
-    "By using floor when the array is of length $4$ (and possibly other lengths) The two sub-arrays do not overlap and as a result only will sort the two sub-arrays (first half and second half with no overlap) locally and not globally.\n",
+    "By using floor when the array is of length $4$ (and possibly other lengths) The two sub-arrays do not overlap and as a result only will sort the two sub-arrays (in the $n = 4$ case) (first half and second half with no overlap) locally and not globally.\n",
     "\n",
     "c) State a recurrence for the number of comparisons executed by STOOGESORT.\n",
     "\n",
@@ -247,7 +249,7 @@
     "}\n",
     "```\n",
     "\n",
-    "The iterative example has a runtime of $T(n) = \\theta(n) + 2$ because the iterative solution at worst has to traverse the length of the passed in array and make two comparisons of the elements explored to the currently held max and min values respectively. For values of significantly large $n$ we can drop the constant term $2$ and take the runtime to be that of $\\theta(n)$ which is equivalent to the recursive implementation shown above.\n",
+    "The iterative example has a runtime of $T(n) = \\theta(n) + 2$ because the iterative solution at worst has to traverse the length of the passed in array and make two comparisons of the elements traversed to the currently held max and min values respectively. For values of significantly large $n$ we can drop the constant term $2$ and take the runtime to be that of $\\theta(n)$ which is equivalent to the recursive implementation shown above.\n",
     "\n",
     "5) An array A[1 . . . n] is said to have a majority element if more than half of its entries are the same. The majority element of A is any element occurring in more than n/2 positions (so if n = 6 or n = 7, the majority element will occur in at least 4 positions). Given an array, the task is to design an algorithm to determine whether the array has a majority element, and, if so, to find that element. The elements of the array are not necessarily from an ordered domain like the integers, so there can be no comparisons of the form “is A[i] > A[j]?”. (Think of the array elements as GIF files, say.) Therefore you cannot sort the array. However you can answer questions of the form: “does A[i] = A[j]?” in constant time. Give a detailed verbal description and pseudocode for a divide and conquer algorithm to find a majority element in A (or determine that no majority element exists). Give a recurrence for the algorithm and determine the asymptotic running time. Note: A O(n) algorithm exists but your algorithm only needs to be O(nlgn).\n",
     "\n",
