Added DAG img for the courses question to the homework 3 notebook

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -52,7 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Draw a directed acyclic graph (DAG) that represents the precedence among the courses."
+    "a) Draw a directed acyclic graph (DAG) that represents the precedence among the courses.\n",
+    "\n",
+    "<img src=\"img/course_dag.jpg\" style=\"transform: rotate(180deg);\"/>"
    ]
   },
   {
