Added topological sort to the cs courses question for homework 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -61,7 +61,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Give a topological sort of the graph."
+    "b) Give a topological sort of the graph.\n",
+    "\n",
+    "One possible topological sort of the graph is:\n",
+    "\n",
+    "* Math 200\n",
+    "* Math 201\n",
+    "* CS 150\n",
+    "* CS 151\n",
+    "* CS 221\n",
+    "* CS 222\n",
+    "* CS 325\n",
+    "* CS 435\n",
+    "* CS 351\n",
+    "* CS 370\n",
+    "* CS 375\n",
+    "* CS 401"
    ]
   },
   {
