--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -44,6 +44,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "3) Below is a list of courses and prerequisites for a factious CS degree."
    ]
@@ -76,7 +81,9 @@
     "* CS 351\n",
     "* CS 370\n",
     "* CS 375\n",
-    "* CS 401"
+    "* CS 401\n",
+    "\n",
+    "This sort shows that courses will need to be in order where a course's prerequisites precede them."
    ]
   },
   {
@@ -106,7 +113,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Give a verbal description of the algorithm and provide detailed pseudocode."
+    "a) Give a verbal description of the algorithm and provide detailed pseudocode.\n",
+    "\n",
+    "```python\n",
+    "def is_two_colorable(adj_list):\n",
+    "    for vertex in adj_list:\n",
+    "        for edge in adj_list[vertex]:\n",
+    "            \n",
+    "```"
    ]
   },
   {
@@ -155,21 +169,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
