Added more content to question 2 response, hw 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -53,7 +53,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This algorithm will topologically sort the graph which is essentially reversing the visit list that results from doing depth first search on the graph. The next step will be to look at each vertex in the list and see that there is at least one edge between each consecutive vertex. The runtime of doing the topological sort will be $O(V + E)$ and the runtime of going through the vertex list created from the topological sort will be $O(V)$, so the overall runtime of the algorithm will be $O(V + E)$."
+    "This algorithm will topologically sort the graph which is essentially reversing the visit list that results from doing depth first search on the graph. The next step will be to look at each vertex in the list and see that there is at least one edge between each consecutive vertex. The runtime of doing the topological sort will be $O(V + E)$ and the runtime of going through the vertex list created from the topological sort will be $O(V)$, so the overall runtime of the algorithm will be $O(V + E)$ because $O(V + E)$ will dominate over the $O(V)$ term.\n",
+    "\n",
+    "Pseudo-code:\n",
+    "\n",
+    "```python\n",
+    "def has_hamiltonian(adj_list):\n",
+    "    \n",
+    "```"
    ]
   },
   {
