Added solution for question 4 of hw 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -132,11 +132,29 @@
    "source": [
     "a) Give a verbal description of the algorithm and provide detailed pseudocode.\n",
     "\n",
-    "```python\n",
-    "def is_two_colorable(adj_list):\n",
-    "    for vertex in adj_list:\n",
-    "        for edge in adj_list[vertex]:\n",
-    "            \n",
+    "```\n",
+    "def main():\n",
+    "    vertice_list = []\n",
+    "    while there are uncolored vertices\n",
+    "        select an uncolored vertex called n\n",
+    "        color(n, L)\n",
+    "    return vertice_list\n",
+    "\n",
+    "def color(vertex n):\n",
+    "    if n is colorless:\n",
+    "        for each vertex m with a common edge to n:\n",
+    "            if some m == color1 and some m == color2:\n",
+    "                return \"Graph is not two-colorable\"\n",
+    "            if m == color1:\n",
+    "                n = color2\n",
+    "            else if m == color2:\n",
+    "                n = color1\n",
+    "            else if m is unknown\n",
+    "                n = color1\n",
+    "                color(m)\n",
+    "        vertice_list.append(n)\n",
+    "\n",
+    "main()      \n",
     "```"
    ]
   },
@@ -145,6 +163,13 @@
    "metadata": {},
    "source": [
     "b) Analyze the running time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each vertex and edge are only checked once, and all other operations are in constant time ($O(1)$) therefore the running time of this algorithm will be $O(V + E)$ where $V$ and $E$ are the numbers of vertices and edges respectively."
    ]
   },
   {
@@ -186,21 +211,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
