Added course schedule answer to part c of question 3 of hw 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -114,6 +114,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "One possible schedule of quarters the courses can be taken in:\n",
+    "\n",
+    "**Quarter One**\n",
+    "\n",
+    "* Math 200\n",
+    "* CS 150\n",
+    "\n",
+    "**Quarter Two**\n",
+    "\n",
+    "* Math 201\n",
+    "* CS 151\n",
+    "\n",
+    "**Quarter Three**\n",
+    "\n",
+    "* CS 221\n",
+    "* CS 351\n",
+    "* CS 370\n",
+    "\n",
+    "**Quarter Four**\n",
+    "\n",
+    "* CS 222\n",
+    "* CS 325\n",
+    "\n",
+    "**Quarter Five**\n",
+    "\n",
+    "* CS 375\n",
+    "* CS 435\n",
+    "\n",
+    "**Quarter Six**\n",
+    "\n",
+    "* CS 401"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "d) Determine the length of the longest path in the DAG. How did you find it? What does this represent?"
    ]
   },
