More answers added to homework 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -228,6 +228,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I would use Dijkstra's algorithm to find the fastest route from the fire station location to each of the intersections because Dijkstra considers paths that have weights, if the graph was unweighted I would have used BFS.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "b) Suppose one ”optimal” location (maybe instead of G) must be selected for the fire station such that it minimizes the distance to the farthest intersection.  Devise an algorithm to solve this problem given an arbitrary road map.  Analyze the time complexity of your algorithm when there are f possible locations for the fire station (which must be at one of the intersections) and r possible roads."
    ]
   },
