More progress on question 2

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -58,8 +58,23 @@
     "Pseudo-code:\n",
     "\n",
     "```python\n",
+    "\n",
+    "# adj_list is a list of tuples where the structure is (node, [list of adjacent nodes])\n",
+    "\n",
     "def has_hamiltonian(adj_list):\n",
+    "    graph_sorted = []\n",
+    "    graph_unsorted = dict(adj_list)\n",
     "    \n",
+    "    while graph_unsorted:\n",
+    "        for node, edges in graph_unsorted.items():\n",
+    "            for edge in edges:\n",
+    "                if edge in graph_unsorted:\n",
+    "                    break\n",
+    "                else:\n",
+    "                    del graph_unsorted[node]\n",
+    "                    graph_sorted.append((node, edges))\n",
+    "    \n",
+    "    graph_sorted.reverse()\n",
     "```"
    ]
   },
@@ -75,6 +90,8 @@
    "metadata": {},
    "source": [
     "a) Draw a directed acyclic graph (DAG) that represents the precedence among the courses.\n",
+    "\n",
+    "**Note: CS 435 should have been CS 425**\n",
     "\n",
     "<img src=\"img/course_dag.jpg\" style=\"transform: rotate(180deg);\"/>"
    ]
@@ -94,7 +111,7 @@
     "* CS 221\n",
     "* CS 222\n",
     "* CS 325\n",
-    "* CS 435\n",
+    "* CS 425\n",
     "* CS 351\n",
     "* CS 370\n",
     "* CS 375\n",
@@ -140,7 +157,7 @@
     "**Quarter Five**\n",
     "\n",
     "* CS 375\n",
-    "* CS 435\n",
+    "* CS 425\n",
     "\n",
     "**Quarter Six**\n",
     "\n",
