Finalizing question 2 response for hw 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -58,23 +58,48 @@
     "Pseudo-code:\n",
     "\n",
     "```python\n",
+    "# structure of adj_list = {4: [5], 6: [5], 5: [7], 7: []}\n",
     "\n",
-    "# adj_list is a list of tuples where the structure is (node, [list of adjacent nodes])\n",
+    "def dfs_topsort(graph):         # recursive dfs with \n",
+    "    L = []                      # additional list for order of nodes\n",
+    "    color = { u : \"white\" for u in graph }\n",
+    "    found_cycle = [False]\n",
+    "    for u in graph:\n",
+    "        if color[u] == \"white\":\n",
+    "            dfs_visit(graph, u, color, L, found_cycle)\n",
+    "        if found_cycle[0]:\n",
+    "            break\n",
+    " \n",
+    "    if found_cycle[0]:           # if there is a cycle, \n",
+    "        L = []                   # then return an empty list  \n",
+    " \n",
+    "    L.reverse()                  # reverse the list\n",
+    "    return L                     # L contains the topological sort\n",
+    " \n",
+    " \n",
+    "def dfs_visit(graph, u, color, L, found_cycle):\n",
+    "    if found_cycle[0]:\n",
+    "        return\n",
+    "    color[u] = \"gray\"\n",
+    "    for v in graph[u]:\n",
+    "        if color[v] == \"gray\":\n",
+    "            found_cycle[0] = True\n",
+    "            return\n",
+    "        if color[v] == \"white\":\n",
+    "            dfs_visit(graph, v, color, L, found_cycle)\n",
+    "    color[u] = \"black\"      # when we're done with u,\n",
+    "    L.append(u)             # add u to list (reverse it later!)\n",
     "\n",
     "def has_hamiltonian(adj_list):\n",
-    "    graph_sorted = []\n",
-    "    graph_unsorted = dict(adj_list)\n",
+    "    graph_sorted = dfs_topsort(adj_list)  \n",
+    "    print(graph_sorted)\n",
+    "    for i in range(0, len(graph_sorted) - 1):\n",
+    "        cur_node = graph_sorted[i]\n",
+    "        next_node = graph_sorted[i + 1]\n",
+    "        if next_node not in adj_list[cur_node]:\n",
+    "            return False\n",
     "    \n",
-    "    while graph_unsorted:\n",
-    "        for node, edges in graph_unsorted.items():\n",
-    "            for edge in edges:\n",
-    "                if edge in graph_unsorted:\n",
-    "                    break\n",
-    "                else:\n",
-    "                    del graph_unsorted[node]\n",
-    "                    graph_sorted.append((node, edges))\n",
-    "    \n",
-    "    graph_sorted.reverse()\n",
+    "    return True\n",
     "```"
    ]
   },
