Added dijkstra images for question 5 for hw 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This algorithm will topologically sort the graph which is essentially reversing the visit list that results from doing depth first search on the graph. The next step will be to look at each vertex in the list and see that there is at least one edge between each consecutive vertex. The runtime of doing the topological sort will be $O(V + E)$ and the runtime of going through the vertex list created from the topological sort will be $O(V)$, so the overall runtime of the algorithm will be $O(V + E)$ because $O(V + E)$ will dominate over the $O(V)$ term.\n",
+    "This algorithm (has_hamiltonian) will topologically sort the graph which is essentially reversing the visit list that results from doing depth first search on the graph. The next step will be to look at each vertex in the list and see that there is at least one edge between each consecutive vertex. The runtime of doing the topological sort will be $O(V + E)$ and the runtime of going through the vertex list created from the topological sort will be $O(V)$, so the overall runtime of the algorithm will be $O(V + E)$ because $O(V + E)$ will dominate over the $O(V)$ term.\n",
     "\n",
     "Pseudo-code:\n",
     "\n",
@@ -142,7 +142,7 @@
     "* CS 375\n",
     "* CS 401\n",
     "\n",
-    "This sort shows that courses will need to be in order where a course's prerequisites precede them."
+    "This sort shows that courses will need to be in an order where a course's prerequisites precede them."
    ]
   },
   {
@@ -193,7 +193,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d) Determine the length of the longest path in the DAG. How did you find it? What does this represent?"
+    "d) Determine the length of the longest path in the DAG. How did you find it? What does this represent?\n",
+    "\n",
+    " The length of the longest path represents the minimum number of quarters that would need to be attended to finish the CS degree with the given prerequisites."
    ]
   },
   {
@@ -270,8 +272,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I would use Dijkstra's algorithm to find the fastest route from the fire station location to each of the intersections because Dijkstra considers paths that have weights, if the graph was unweighted I would have used BFS.\n",
-    "\n"
+    "I would use Dijkstra's algorithm to find the fastest route from the fire station location to each of the intersections. The running steps of the algorithm on the graph above is shown in a series of images below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/dijkstra/one.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/dijkstra/two.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/dijkstra/three.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/dijkstra/four.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/dijkstra/five.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/dijkstra/six.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/dijkstra/seven.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/dijkstra/eight.jpg\" />"
    ]
   },
   {
@@ -280,6 +337,11 @@
    "source": [
     "b) Suppose one ”optimal” location (maybe instead of G) must be selected for the fire station such that it minimizes the distance to the farthest intersection.  Devise an algorithm to solve this problem given an arbitrary road map.  Analyze the time complexity of your algorithm when there are f possible locations for the fire station (which must be at one of the intersections) and r possible roads."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
