More work on question 5on hw 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -272,7 +272,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I would use Dijkstra's algorithm to find the fastest route from the fire station location to each of the intersections. The running steps of the algorithm on the graph above is shown in a series of images below:"
+    "I would use Dijkstra's algorithm to find the fastest route from the fire station location to each of the intersections. The running steps of the algorithm on the graph above is shown in a series of images below:\n",
+    "\n",
+    "**Asterisks denote when a vertex has been visited**"
    ]
   },
   {
@@ -341,13 +343,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The overview of the algorithm will be to call Dijkstra's algorithm on every vertex and find the smallest max distance that results."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "c) In the above graph what is the “optimal” location to place the fire station?  Why?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When running the algorithm on the current intersection graph the optimal location for the fire station would be at intersection E where the smallest longest path distance would be E to A which is a distance of $10$. Therefore placing the fire station at E will ensure minimal response times for all locations that need to be protected."
    ]
   },
   {
