more progress on hw 3

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -195,7 +195,16 @@
    "source": [
     "d) Determine the length of the longest path in the DAG. How did you find it? What does this represent?\n",
     "\n",
-    " The length of the longest path represents the minimum number of quarters that would need to be attended to finish the CS degree with the given prerequisites."
+    "The longest path for this course graph has a length of $5$ which I determined by visually looking over the graph to be the courses as listed:\n",
+    "\n",
+    "* CS 150\n",
+    "* CS 151\n",
+    "* CS 221\n",
+    "* CS 222\n",
+    "* CS 375\n",
+    "* CS 401\n",
+    "\n",
+    "In order to find the length of the longest path for an arbitrary DAG you would need to sort it topologically and then compute the length of the longest path ending at each vertex. The length of the longest path represents the minimum number of quarters that would need to be attended to finish the CS degree with the given prerequisites."
    ]
   },
   {
@@ -212,6 +221,8 @@
    "metadata": {},
    "source": [
     "a) Give a verbal description of the algorithm and provide detailed pseudocode.\n",
+    "\n",
+    "The algorithm will iterate over all of the \"colorless\" vertices to then assign them a color that is opposite of the vertices it is adjacent to. If it is discovered that at least two vertices adjacent to the inspected node have both of the colors respectively the algorithm outputs the message that the graph is not two-colorable. Otherwise if the adjacent vertex has color 1, color 2 would be assigned to the inspected vertex and vice versa. If the color for the adjacent vertex is unknown the inspected vertex will be assigned the first color and the adjacent vertex will then be colored. At the conclusion of the algorithm the vertex list will be returned.\n",
     "\n",
     "```\n",
     "def main():\n",
@@ -344,8 +355,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The overview of the algorithm will be to call Dijkstra's algorithm on every vertex and find the smallest max distance that results."
+    "The overview of the algorithm will be to call Dijkstra's algorithm on every vertex and find the smallest max distance that results. The vertex that yields the smallest maximum distance would then be the \"optimal\" station location. The runtime of Dijkstra's algorithm is $O(r * log(f))$ where $r$ is the same as the graph edges and $f$ is the number of intersections. Dijkstra's algorithm will be run $f$ times therefore the overall runtime of the algorithm to find the optimal location will be: $O(f * r * log(f))$ The code of the algorithm is below:"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -366,6 +382,15 @@
    "metadata": {},
    "source": [
     "**EXTRA CREDIT:** Now suppose you can build two fire stations.  Where would you place them to minimize the farthest distance from an intersection to one of the fire stations?  Devise an algorithm to solve this problem given an arbitrary road map.  Analyze the time complexity of your algorithm when there are f possible locations for the fire station (which must be at one of the intersections) and r possible roads."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I would place them at C and H because the furtherest distance to any one intersection is $6$. Firestation C would protect A, C, D, E and F. Firestation H would defend intersections B, G and H.\n",
+    "\n",
+    "The generalized algorithm would use "
    ]
   }
  ],
