Added final homework 3 notebook and added pdf version

--- a/week5/CS325_Homework_Three.ipynb
+++ b/week5/CS325_Homework_Three.ipynb
@@ -355,13 +355,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The overview of the algorithm will be to call Dijkstra's algorithm on every vertex and find the smallest max distance that results. The vertex that yields the smallest maximum distance would then be the \"optimal\" station location. The runtime of Dijkstra's algorithm is $O(r * log(f))$ where $r$ is the same as the graph edges and $f$ is the number of intersections. Dijkstra's algorithm will be run $f$ times therefore the overall runtime of the algorithm to find the optimal location will be: $O(f * r * log(f))$ The code of the algorithm is below:"
+    "The overview of the algorithm will be to call Dijkstra's algorithm on every vertex and find the smallest max distance that results. The vertex that yields the smallest maximum distance would then be the \"optimal\" station location. The runtime of Dijkstra's algorithm is $O(r * log(f))$ where $r$ is the same as the graph edges and $f$ is the number of intersections. Dijkstra's algorithm will be run $f$ times therefore the overall runtime of the algorithm to find the optimal location will be: $O(f * r * log(f))$."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -390,7 +385,7 @@
    "source": [
     "I would place them at C and H because the furtherest distance to any one intersection is $6$. Firestation C would protect A, C, D, E and F. Firestation H would defend intersections B, G and H.\n",
     "\n",
-    "The generalized algorithm would use "
+    "The generalized algorithm would use a matrix where firehouse1, firehouse2, and d are potential locations for the two firehouses and the other locations that need to be protected respectively. Because the locations and intersections are interchangeable we would get a matrix of size $f^3$. So we would loop over every possible location for the first station inner looping over every possible second station location and inner looping again to calculate the minimum distance from whichever firehouse is closer to d for each d."
    ]
   }
  ],
