Removed week6 dir to put homework 4 in the more accurate week8 directory

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -4,17 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Name: Alexander Miranda  \n",
-    "Date: November 16th, 2016  \n",
+    "Name: Alexander Miranda   \n",
+    "Date: November 16, 2016  \n",
     "Assignment: Homework 4  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "1) "
-   ]
+   "source": []
   }
  ],
  "metadata": {
